kubernetes/emby-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: emby
  name: emby
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: emby
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network: "true"
        io.kompose.service: emby
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Europe/Paris
          image: linuxserver/emby:latest
          name: emby
          ports:
            - containerPort: 8096
            - containerPort: 8920
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: emby-claim0
            - mountPath: /data
              name: downloads
      restartPolicy: Always
      volumes:
        - name: emby-claim0
          persistentVolumeClaim:
            claimName: emby-claim0
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
status: {}
