kubernetes/deluge-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: deluge
  name: deluge
spec:
  ports:
    - name: "8112"
      port: 8112
      targetPort: 8112
    - name: "8118"
      port: 8118
      targetPort: 8118
    - name: "58846"
      port: 58846
      targetPort: 58846
    - name: "58946"
      port: 58946
      targetPort: 58946
    - name: 58946-udp
      port: 58946
      protocol: UDP
      targetPort: 58946
  selector:
    io.kompose.service: deluge
status:
  loadBalancer: {}
