kubernetes/ingress-dashboard.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - dashboard.roon.fr
    secretName: dashboard-roon-tls
  rules:
  - host: dashboard.roon.fr
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kubernetes-dashboard
              port:
                number: 443
