kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seedbox-ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-staging
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - emby.roon.fr
    secretName: emby-roon-tls
  rules:
  - host: emby.roon.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: emby
            port: 
              number: 8096
  - host: deluge.roon.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deluge
            port: 
              number: 8112
  - host: privoxy.roon.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deluge
            port: 
              number: 8118
